--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,17 @@ sudo: required
 
 os:
   - linux
+  - windows
 
 before_install:
-  - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
-  - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
-  - sudo apt-get update
-  - sudo apt-get -y install docker-ce
+  - |
+    env | sort
+    if [ "$TRAVIS_OS_NAME" = 'linux' ]; then
+      curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+      sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+      sudo apt-get update
+      sudo apt-get -y install docker-ce
+    fi
 
   # Repo mount location inside docker
   - export REPO_MNT=/repo
