Revert windows ci -- let's do this on a branch
This reverts commit ea2b085f620af25dcb3c27051fcc48986e79b2e4.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,12 @@ sudo: required
 
 os:
   - linux
-  - windows
 
 before_install:
-  - |
-    env | sort
-    if [ "$TRAVIS_OS_NAME" = 'linux' ]; then
-      curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
-      sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
-      sudo apt-get update
-      sudo apt-get -y install docker-ce
-    fi
+  - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+  - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+  - sudo apt-get update
+  - sudo apt-get -y install docker-ce
 
   # Repo mount location inside docker
   - export REPO_MNT=/repo
