--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 sudo: required
 
 os:
-  - linux
   - windows
+# Just testing windows for now...
+#  -linux
 
 language: shell
 
@@ -14,6 +15,9 @@ before_install:
       sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
       sudo apt-get update
       sudo apt-get -y install docker-ce
+      export DOCKER_ROOT=ubuntu:14.04
+    else
+      export DOCKER_ROOT=microsoft/windowsservercore:1803
     fi
 
   # Repo mount location inside docker
@@ -25,8 +29,11 @@ install:
     # - - Setup some docker images as Haxe+hxcpp build environments - -
 
     # Neko 2.1.0 base image
-    docker run -e LANG=C.UTF-8 -v "$TRAVIS_BUILD_DIR:$REPO_MNT" ubuntu:14.04 /bin/bash -c "cd $REPO_MNT; source ci/init_env.source; source ci/setup.neko.source"
+    date
+    docker run -e LANG=C.UTF-8 -v "$TRAVIS_BUILD_DIR:$REPO_MNT" $DOCKER_ROOT /bin/bash -c "cd $REPO_MNT; source ci/init_env.source; source ci/setup.neko.source"
     (docker commit `docker ps -lq` | cut -c8-) > ~/.docker.image.neko
+    date
+    echo "Write base neko image `~/.docker.image.neko`"
 
     # Build the rest off of that...
 
