--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,6 @@ before_install:
     env | sort
     export DOCKER_ROOT=microsoft/windowsservercore:1803
     export REPO_MNT=/c/repo
-    export VOLUMES="-v \"c:\\Users\\travis\\build\\jcward\\hxtelemetry:C:\\repo\""
 
 # Perform docker image setup, which sets up the environments
 install:
@@ -21,8 +20,8 @@ install:
 
     # Neko 2.1.0 base image
     date
-    echo "docker run -e LANG=C.UTF-8 $DOCKER_ROOT /bin/bash -c \"cd $REPO_MNT; source ci/init_env.source; source ci/setup.neko.source\""
-    docker run -e LANG=C.UTF-8 $DOCKER_ROOT /bin/bash -c "cd $REPO_MNT; source ci/init_env.source; source ci/setup.neko.source"
+    echo "docker run -e LANG=C.UTF-8 -v C:\Users\travis\build\jcward\hxtelemetry:C:\repo\ $DOCKER_ROOT /bin/bash -c \"cd $REPO_MNT; source ci/init_env.source; source ci/setup.neko.source\""
+    docker run -e LANG=C.UTF-8 -v C:\Users\travis\build\jcward\hxtelemetry:C:\repo\ $DOCKER_ROOT /bin/bash -c "cd $REPO_MNT; source ci/init_env.source; source ci/setup.neko.source"
     (docker commit `docker ps -lq` | cut -c8-) > ~/.docker.image.neko
     date
     echo "Write base neko image `cat ~/.docker.image.neko`"
