--- a/.travis.yml
+++ b/.travis.yml
@@ -19,10 +19,12 @@ install:
     # - - Setup some docker images as Haxe+hxcpp build environments - -
 
     # Neko 2.1.0 base image
-    date
-    echo "docker run -e LANG=C.UTF-8 -v C:\Users\travis\build\jcward\hxtelemetry:C:\repo\ $DOCKER_ROOT c:\cygwin\bin\bash -c \"dir; cd /c/repo; dir\""
-    docker run -e LANG=C.UTF-8 -v C:\Users\travis\build\jcward\hxtelemetry:C:\repo\ $DOCKER_ROOT c:\cygwin\bin\bash -c "dir; cd /c/repo; dir"
+    echo "BEFORE"
+    echo "docker run -v C:\Users\travis\build\jcward\hxtelemetry:C:\repo\ $DOCKER_ROOT c:\cygwin\bin\bash -c \"dir; cd /c/repo; dir\""
+    docker run -v C:\Users\travis\build\jcward\hxtelemetry:C:\repo\ $DOCKER_ROOT c:\cygwin\bin\bash -c "dir; cd /c/repo; dir"
+    echo "AFTER"
     (docker commit `docker ps -lq` | cut -c8-) > ~/.docker.image.neko
+    echo "AFTER COMMIT"
     date
     echo "Write base neko image `cat ~/.docker.image.neko`"
 
