--- a/.travis.yml
+++ b/.travis.yml
@@ -12,15 +12,15 @@ before_install:
     env | sort
     export DOCKER_ROOT=microsoft/windowsservercore:1803
     export REPO_MNT=/c/repo
+  - echo "ok"
 
 # Perform docker image setup, which sets up the environments
 install:
-  - |
-    alias save_export=export
-    mkdir /opt/
-    source $TRAVIS_BUILD_DIR/ci/setup.haxe-3.4.7.source
-    $TRAVIS_BUILD_DIR/ci/setup.hxcpp.sh 3.4.220
-    ls -la /opt/
+  - alias save_export=export
+  - mkdir /opt/
+  - source $TRAVIS_BUILD_DIR/ci/setup.haxe-3.4.7.source
+  - $TRAVIS_BUILD_DIR/ci/setup.hxcpp.sh 3.4.220
+  - ls -la /opt/
     
 script:
-    date
+  - date
