--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,13 @@ before_install:
 
 # Perform docker image setup, which sets up the environments
 install:
-  - alias save_export=export
-  - mkdir /opt/
-  - source $TRAVIS_BUILD_DIR/ci/setup.haxe-3.4.7.source
-  - $TRAVIS_BUILD_DIR/ci/setup.hxcpp.sh 3.4.220
-  - ls -la /opt/
-    
+  - |
+    alias save_export=export
+    mkdir /opt/
+    source $TRAVIS_BUILD_DIR/ci/setup.haxe-3.4.7.source
+    $TRAVIS_BUILD_DIR/ci/setup.hxcpp.sh 3.4.220
+    ls -la /opt/
+    haxe
+
 script:
   - date
