Enabled Travis-CI Windows testing (#61)
* Must specify language for windows (default ruby not supported)

* More windows testing...

* more windows ci tweaks

* windows ci - can i get echo on

* more windows ci tinkering

* more windows ci tinkering

* more windows ci tinkering

* more windows ci tinkering

* more windows ci tinkering

* more windows ci tinkering

* windows ci

* Update .travis.yml

* Update .travis.yml

* Update .travis.yml

* Update .travis.yml

* Update .travis.yml

* Update .travis.yml

* Update .travis.yml

* Update .travis.yml

* Update .travis.yml

* Update .travis.yml

* Update .travis.yml

* Update .travis.yml

* Update .travis.yml

* Update .travis.yml

* Cross platform haxe install

* Update setup.haxe-3.4.7.source

* Update setup.neko.source

* Update .travis.yml

* Update setup.haxe-3.4.7.source

* Update .travis.yml

* Update setup.neko.source

* Update setup.neko.source

* update [skip travis]

* Update setup.neko.source

* Update setup.neko.source

* update [skip travis]

* Update setup.haxe-3.4.7.source

* Update setup.neko.source

* Update setup.neko.source

* Update setup.haxe-3.4.7.source

* Update .travis.yml

* Update .travis.yml

* Update .travis.yml

* Update test_wastealloc.sh

* [skip travis]

* [skip travis]

* [skip travis]

* [skip travis]

* Update .travis.yml

* Update .travis.yml

* Update .travis.yml

* Update .travis.yml

* Update .travis.yml

* Update .travis.yml

* Update init_env.source

* intentional breakage test

* Update HxTelemetry.hx

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,42 +1,55 @@
 sudo: required
 
 os:
+  - windows
   - linux
 
-before_install:
-  - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
-  - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
-  - sudo apt-get update
-  - sudo apt-get -y install docker-ce
+language: shell
 
-  # Repo mount location inside docker
-  - export REPO_MNT=/repo
+before_install:
+  - |
+    env | sort
+    if [ "$TRAVIS_OS_NAME" = 'linux' ]; then
+      curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+      sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+      sudo apt-get update
+      sudo apt-get -y install docker-ce
+      export REPO_MNT=/repo
+    fi
+
 
 # Perform docker image setup, which sets up the environments
 install:
   - |
-    # - - Setup some docker images as Haxe+hxcpp build environments - -
+    if [ "$TRAVIS_OS_NAME" = 'linux' ]; then
+      
+      # Neko 2.1.0 base image
+      docker run -e LANG=C.UTF-8 -v "$TRAVIS_BUILD_DIR:$REPO_MNT" ubuntu:14.04 /bin/bash -c "cd $REPO_MNT; source ci/init_env.source; source ci/setup.neko.source"
+      (docker commit `docker ps -lq` | cut -c8-) > /tmp/.docker.image.neko
+      
+      # Build the rest off of that...
+      # Haxe 3.2.1, hxcpp 3.2.193
+      docker run -e LANG=C.UTF-8 -v "$TRAVIS_BUILD_DIR:$REPO_MNT" `cat /tmp/.docker.image.neko` /bin/bash -c "source ~/.docker.env; source $REPO_MNT/ci/setup.haxe-3.2.1.source; $REPO_MNT/ci/setup.hxcpp.sh 3.2.193"
+      (docker commit `docker ps -lq` | cut -c8-) > /tmp/.docker.image__3.2.1__3.2.193
+      
+      # Haxe 3.4.7, hxcpp 3.4.220
+      docker run -e LANG=C.UTF-8 -v "$TRAVIS_BUILD_DIR:$REPO_MNT" `cat /tmp/.docker.image.neko` /bin/bash -c "source ~/.docker.env; source $REPO_MNT/ci/setup.haxe-3.4.7.source; $REPO_MNT/ci/setup.hxcpp.sh 3.4.220"
+      (docker commit `docker ps -lq` | cut -c8-) > /tmp/.docker.image__3.4.7__3.4.220
+      
+      # Haxe 4.0.0-preview5, hxcpp 4.0.7
+      docker run -e LANG=C.UTF-8 -v "$TRAVIS_BUILD_DIR:$REPO_MNT" `cat /tmp/.docker.image.neko` /bin/bash -c "source ~/.docker.env; source $REPO_MNT/ci/setup.haxe-4.0.0-p5.source; $REPO_MNT/ci/setup.hxcpp.sh 4.0.7"
+      (docker commit `docker ps -lq` | cut -c8-) > /tmp/.docker.image__4.0.0p5__4.0.7
+      
+    fi
 
-    # Neko 2.1.0 base image
-    docker run -e LANG=C.UTF-8 -v "$TRAVIS_BUILD_DIR:$REPO_MNT" ubuntu:14.04 /bin/bash -c "cd $REPO_MNT; source ci/init_env.source; source ci/setup.neko.source"
-    (docker commit `docker ps -lq` | cut -c8-) > ~/.docker.image.neko
-
-    # Build the rest off of that...
-
-    # Haxe 3.2.1, hxcpp 3.2.193
-    docker run -e LANG=C.UTF-8 -v "$TRAVIS_BUILD_DIR:$REPO_MNT" `cat ~/.docker.image.neko` /bin/bash -c "source ~/.docker.env; source $REPO_MNT/ci/setup.haxe-3.2.1.source; $REPO_MNT/ci/setup.hxcpp.sh 3.2.193"
-    (docker commit `docker ps -lq` | cut -c8-) > ~/.docker.image__3.2.1__3.2.193
-
-    # Haxe 3.4.7, hxcpp 3.4.220
-    docker run -e LANG=C.UTF-8 -v "$TRAVIS_BUILD_DIR:$REPO_MNT" `cat ~/.docker.image.neko` /bin/bash -c "source ~/.docker.env; source $REPO_MNT/ci/setup.haxe-3.4.7.source; $REPO_MNT/ci/setup.hxcpp.sh 3.4.220"
-    (docker commit `docker ps -lq` | cut -c8-) > ~/.docker.image__3.4.7__3.4.220
-
-    # Haxe 4.0.0-preview5, hxcpp 4.0.7
-    docker run -e LANG=C.UTF-8 -v "$TRAVIS_BUILD_DIR:$REPO_MNT" `cat ~/.docker.image.neko` /bin/bash -c "source ~/.docker.env; source $REPO_MNT/ci/setup.haxe-4.0.0-p5.source; $REPO_MNT/ci/setup.hxcpp.sh 4.0.7"
-    (docker commit `docker ps -lq` | cut -c8-) > ~/.docker.image__4.0.0p5__4.0.7
-
-# Invoke the above container states and launch tests in each:
 script:
-  - docker run -e LANG=C.UTF-8 -v "$TRAVIS_BUILD_DIR:$REPO_MNT" `cat ~/.docker.image__3.2.1__3.2.193` /bin/bash -c "source ~/.docker.env; cd $REPO_MNT; ./ci/test_wastealloc.sh"
-  - docker run -e LANG=C.UTF-8 -v "$TRAVIS_BUILD_DIR:$REPO_MNT" `cat ~/.docker.image__3.4.7__3.4.220` /bin/bash -c "source ~/.docker.env; cd $REPO_MNT; ./ci/test_wastealloc.sh"
-  - docker run -e LANG=C.UTF-8 -v "$TRAVIS_BUILD_DIR:$REPO_MNT" `cat ~/.docker.image__4.0.0p5__4.0.7` /bin/bash -c "source ~/.docker.env; cd $REPO_MNT; ./ci/test_wastealloc.sh"
+  - |
+    if [ "$TRAVIS_OS_NAME" = 'linux' ]; then
+      # Linux runs various environment images
+      docker run -e LANG=C.UTF-8 -v "$TRAVIS_BUILD_DIR:$REPO_MNT" `cat /tmp/.docker.image__3.2.1__3.2.193` /bin/bash -c "source ~/.docker.env; cd $REPO_MNT; ./ci/test_wastealloc.sh"
+      docker run -e LANG=C.UTF-8 -v "$TRAVIS_BUILD_DIR:$REPO_MNT" `cat /tmp/.docker.image__3.4.7__3.4.220` /bin/bash -c "source ~/.docker.env; cd $REPO_MNT; ./ci/test_wastealloc.sh"
+      docker run -e LANG=C.UTF-8 -v "$TRAVIS_BUILD_DIR:$REPO_MNT" `cat /tmp/.docker.image__4.0.0p5__4.0.7` /bin/bash -c "source ~/.docker.env; cd $REPO_MNT; ./ci/test_wastealloc.sh"
+    else
+      # Windows sets up and runs a single environment
+      cd $TRAVIS_BUILD_DIR && ./ci/cygwin_ci.sh
+    fi
